force-app/main/default/objects/EBayAppCredential__mdt/EBayAppCredential__mdt.object-meta.xml
<CustomObject>
    <description>EBay Client Application Credentials designed for use with RentAll Application</description>
    <label>EBay Application Credential</label>
    <pluralLabel>EBay Application Credentials</pluralLabel>
</CustomObject>