force-app/main/default/objects/EBayAppCredential__mdt/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <description>The Client ID of the RentAll EBay application.</description>
    <inlineHelpText>The Client ID of the RentAll EBay application.</inlineHelpText>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>