force-app/main/default/objects/EBayAppCredential__mdt/fields/ClientScopes__c.field-meta.xml
<CustomField>
    <fullName>ClientScopes__c</fullName>
    <description>Space-separated list of scopes.</description>
    <inlineHelpText>Space-separated list of scopes.</inlineHelpText>
    <label>Client Scopes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>