force-app/main/default/objects/EBayAppCredential__mdt/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <description>The Client Secret for the eBay Client for the RentAll Application.</description>
    <inlineHelpText>The Client Secret for the eBay Client for the RentAll Application.</inlineHelpText>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>