force-app/main/default/objects/EBayAppCredential__mdt/fields/EbayRedirectUrlName__c.field-meta.xml
<CustomField>
    <fullName>EbayRedirectUrlName__c</fullName>
    <description>The Name of the eBay URL Redirect Url Application.</description>
    <inlineHelpText>The Name of the eBay URL Redirect Url Application.</inlineHelpText>
    <label>eBay Redirect URL Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>