force-app/main/default/objects/EBayAppCredential__mdt/fields/IsSandbox__c.field-meta.xml
<CustomField>
    <fullName>IsSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Connection to an eBay Sandbox?</description>
    <inlineHelpText>Is the Connection to an eBay Sandbox?</inlineHelpText>
    <label>Sandbox</label>
    <type>Checkbox</type>
</CustomField>